<resources>
    <string name="app_name">Lafar</string>
    <string name="discover_fab_description">Search Nearby Restaurant</string>
    <string name="action_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_discover">Discover</string>
    <string name="bottom_navigation_drawer_chevron_description">Open or Close Navigation Drawer</string>
    <string name="bottom_navigation_drawer_discover_icon">Discover Icon</string>
    <string name="bottom_navigation_drawer_home">Home</string>
    <string name="logo_description">Lafar Logo</string>
    <string name="greeting_placeholder">Siang Rena, dari</string>
    <string name="current_place_placeholder">Ubud, Gianyar</string>
    <string name="section_ragam_kuliner_title">Ragam Kuliner</string>
    <string name="expand_placeholder">Lihat Semua</string>
    <string name="section_lagi_ngetrend_banget_title">Lagi Ngetrend Banget</string>
    <string name="section_tempatnya_instagrammable_title">Tempatnya Instagrammable</string>
    <string name="chevron_lagi_ngetrend_banget_description">Lihat semua hidangan yang sedang ngetrend</string>
    <string name="chevron_ragam_kuliner_description">Lihat semua ragam kuliner yang ada</string>
    <string name="notification_description">Lihat notifikasi untuk anda</string>
    <string name="chevron_tempatnya_instagrammable_description">Lihat tempat paling instagrammable dan populer</string>
    <string name="item_restaurant_friends_placeholder">Teman yang pernah kesini:</string>
    <string name="home_to_restaurant_transition_name">restaurant_card_%1$s</string>
    <string name="home_to_restaurant_detail_transition">Home to Restaurant Detail Transition</string>
    <string name="tab_title_menu">Menu</string>
    <string name="tab_title_gallery">Galeri</string>
    <string name="tab_title_review">Ulasan</string>
    <string name="best_seller_menu">Best Seller</string>
    <string name="promo_weekend_menu">Promo Weekend</string>
    <string name="makanan_menu">Makanan</string>
    <string name="minuman_menu">Minuman</string>
    <string name="restaurant_to_menu_transition_name">menu_card_%1$s</string>
    <string name="restaurant_to_menu__transition">Restaurant Detail to Menu Transition</string>
    <string name="menu_to_detail_transition_name">menu_detail_card_%1$s</string>
    <string name="menu_to_detial_transition">Menu to Menu Detail Transition</string>
    <string name="menu_addon_title">Tambahan</string>
    <string name="section_album_title">Album</string>
    <string name="postingan_teman_kamu_section_title">Postingan Teman Kamu</string>
    <string name="ulasan_terakhir_section_title">Ulasan Terakhir</string>
    <string name="ulasan_teman_kamu_section_title">Ulasan Teman Kamu</string>
    <string name="play_button_label">Play Button</string>
    <string name="translate_label">Terjemahkan</string>
</resources>