<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/bottom_app_bar_height"
        android:transitionGroup="true"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:paddingBottomSystemWindowInsets="@{true}"
        app:paddingTopSystemWindowInsets="@{true}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_banner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/banner_height"
                android:background="?colorPrimary"
                android:backgroundTint="?colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="bottom"
                        android:scaleType="fitXY"
                        android:src="@drawable/bg_slider"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/sv_carousel" />

                    <ImageView
                        android:id="@+id/iv_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/md_margin_padding"
                        android:layout_marginTop="@dimen/md_margin_padding"
                        android:contentDescription="@string/logo_description"
                        android:src="@drawable/ic_logo_wordmark"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
                        app:layout_constraintEnd_toStartOf="@+id/imageView12"
                        app:layout_constraintStart_toEndOf="@+id/iv_logo"
                        app:layout_constraintTop_toTopOf="@+id/imageView12">

                        <TextView
                            android:id="@+id/tv_greet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/greeting_placeholder"
                            android:textAppearance="@style/TextAppearance.Lafar.Caption"
                            android:textColor="@color/color_on_primary_surface_emphasis_high" />

                        <TextView
                            android:id="@+id/tv_place"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/grid_0_5"
                            android:text="@string/current_place_placeholder"
                            android:textAppearance="@style/TextAppearance.Lafar.Caption.Bold"
                            android:textColor="@color/color_on_primary_surface_emphasis_high" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/grid_0_5"
                            app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/notification_description"
                        android:src="@drawable/ic_mdi_bell"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.smarteist.autoimageslider.SliderView
                        android:id="@+id/sv_carousel"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="32dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                        app:sliderIndicatorEnabled="true"
                        app:sliderIndicatorGravity="left|bottom"
                        app:sliderIndicatorMarginBottom="@dimen/lg_margin_padding"
                        app:sliderIndicatorMarginLeft="@dimen/md_margin_padding"
                        app:sliderIndicatorOrientation="horizontal"
                        app:sliderIndicatorSelectedColor="?colorOnPrimary" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_ragam_kuliner"
                android:layout_width="@dimen/text_lg_max_width"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/section_ragam_kuliner_title"
                android:textAppearance="@style/TextAppearance.Lafar.Headline3"
                app:layout_constraintEnd_toStartOf="@+id/tv_lihat_semua_ragam_kuliner"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fl_banner" />

            <TextView
                android:id="@+id/tv_lihat_semua_ragam_kuliner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/expand_placeholder"
                android:textAppearance="@style/TextAppearance.Lafar.Caption"
                app:layout_constraintBottom_toBottomOf="@+id/iv_chevron_ragam_kuliner"
                app:layout_constraintEnd_toStartOf="@+id/iv_chevron_ragam_kuliner"
                app:layout_constraintTop_toTopOf="@+id/iv_chevron_ragam_kuliner" />

            <ImageView
                android:id="@+id/iv_chevron_ragam_kuliner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/chevron_ragam_kuliner_description"
                android:src="@drawable/ic_baseline_chevron_right_24"
                app:layout_constraintBottom_toBottomOf="@+id/tv_ragam_kuliner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_ragam_kuliner" />

            <HorizontalScrollView
                android:id="@+id/hv_chip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ragam_kuliner">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_cuisine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingStart="@dimen/md_margin_padding"
                    android:paddingEnd="@dimen/md_margin_padding"
                    app:singleLine="true"
                    app:singleSelection="true" />

            </HorizontalScrollView>

            <TextView
                android:id="@+id/tv_ngetrend"
                android:layout_width="@dimen/text_lg_max_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/section_lagi_ngetrend_banget_title"
                android:textAppearance="@style/TextAppearance.Lafar.Headline3"
                app:layout_constraintEnd_toStartOf="@+id/tv_lihat_semua_trend"
                app:layout_constraintStart_toStartOf="@+id/tv_ragam_kuliner"
                app:layout_constraintTop_toBottomOf="@+id/hv_chip" />

            <TextView
                android:id="@+id/tv_lihat_semua_trend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/expand_placeholder"
                android:textAppearance="@style/TextAppearance.Lafar.Caption"
                app:layout_constraintBottom_toBottomOf="@+id/iv_chevron_ngetrend"
                app:layout_constraintEnd_toStartOf="@+id/iv_chevron_ngetrend"
                app:layout_constraintTop_toTopOf="@+id/iv_chevron_ngetrend" />

            <ImageView
                android:id="@+id/iv_chevron_ngetrend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/chevron_lagi_ngetrend_banget_description"
                android:src="@drawable/ic_baseline_chevron_right_24"
                app:layout_constraintBottom_toBottomOf="@+id/tv_ngetrend"
                app:layout_constraintEnd_toEndOf="@+id/iv_chevron_ragam_kuliner"
                app:layout_constraintTop_toTopOf="@+id/tv_ngetrend" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_lagi_ngetrend_banget"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ngetrend" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/gr_semua_ngetrend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="tv_lihat_semua_trend,iv_chevron_ngetrend" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="@dimen/text_lg_max_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/section_tempatnya_instagrammable_title"
                android:textAppearance="@style/TextAppearance.Lafar.Headline3"
                app:layout_constraintEnd_toStartOf="@+id/tv_lihat_semua_instagrammable"
                app:layout_constraintStart_toStartOf="@+id/tv_ngetrend"
                app:layout_constraintTop_toBottomOf="@+id/rv_lagi_ngetrend_banget" />

            <TextView
                android:id="@+id/tv_lihat_semua_instagrammable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/expand_placeholder"
                android:textAppearance="@style/TextAppearance.Lafar.Caption"
                app:layout_constraintBottom_toBottomOf="@+id/iv_chevron_instagrammable"
                app:layout_constraintEnd_toStartOf="@+id/iv_chevron_instagrammable"
                app:layout_constraintTop_toTopOf="@+id/iv_chevron_instagrammable" />

            <ImageView
                android:id="@+id/iv_chevron_instagrammable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/chevron_tempatnya_instagrammable_description"
                android:src="@drawable/ic_baseline_chevron_right_24"
                app:layout_constraintBottom_toBottomOf="@+id/textView14"
                app:layout_constraintEnd_toEndOf="@+id/iv_chevron_ngetrend"
                app:layout_constraintTop_toTopOf="@+id/textView14" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tempatnya_instagrammable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/gr_semua_ragam_kuliner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="411dp"
                app:constraint_referenced_ids="tv_lihat_semua_ragam_kuliner,iv_chevron_ragam_kuliner" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/gr_tempatnya_instagrammable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="tv_lihat_semua_instagrammable,iv_chevron_instagrammable" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>