<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_ulasan_terakhir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:maxLines="3"
                android:singleLine="false"
                android:text="@string/ulasan_terakhir_section_title"
                android:textAppearance="@style/TextAppearance.Lafar.Headline3"
                app:layout_constraintEnd_toStartOf="@+id/iv_chevron_ulasan_terakhir"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_chevron_ulasan_terakhir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/chevron_lagi_ngetrend_banget_description"
                android:src="@drawable/ic_baseline_chevron_right_24"
                app:layout_constraintBottom_toBottomOf="@+id/tv_ulasan_terakhir"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_ulasan_terakhir" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ulasan_terakhir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ulasan_terakhir" />

            <TextView
                android:id="@+id/tv_ulasan_teman"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="64dp"
                android:maxLines="3"
                android:singleLine="false"
                android:text="@string/ulasan_teman_kamu_section_title"
                android:textAppearance="@style/TextAppearance.Lafar.Headline3"
                app:layout_constraintEnd_toStartOf="@+id/iv_chevron_postingan_teman"
                app:layout_constraintStart_toStartOf="@+id/tv_ulasan_terakhir"
                app:layout_constraintTop_toBottomOf="@+id/rv_ulasan_terakhir" />

            <ImageView
                android:id="@+id/iv_chevron_postingan_teman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/chevron_lagi_ngetrend_banget_description"
                android:src="@drawable/ic_baseline_chevron_right_24"
                app:layout_constraintBottom_toBottomOf="@+id/tv_ulasan_teman"
                app:layout_constraintEnd_toEndOf="@+id/iv_chevron_ulasan_terakhir"
                app:layout_constraintTop_toTopOf="@+id/tv_ulasan_teman" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ulasan_teman"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_ulasan_teman" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>